Fix alignment issues with section

--- a/content/Assets/Styles/components/image/_default.scss
+++ b/content/Assets/Styles/components/image/_default.scss
@@ -3,6 +3,8 @@
    ========================================================================== */
 
 .image {
+    display: inline-block; 
+
     &--responsive {
         display: block;
 
